# static_analysis

./: .clang-format  CMakeLists.txt  README.md  array.c  bit_manip.c  enum.c  function_ptrs.c  positives.c  ptrs.c  ptrs2.c
.github/workflows/: cmake.yml  cmake_analysis.yml  cmake_codechecker.yml  cmake_default.yml  cmake_memcheck.yml  cmake_new.yml  codeql-analysis.yml  semgrep.yml
advent2021/: CMakeLists.txt  README.md  read_input.c  read_input.h
advent2021/1/: 1.c
advent2021/2/: 2.c
advent2021/3/: 3.c
advent2021/4/: 4.c
react_exercise/: CMakeLists.txt  README.md  react.c  react.h  react_alternative.c
